2006-09-01  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/midi_drivers/LowLevelMidiDriver.cpp : Improving termination code 
	  for threaded midi drivers
	* server/servemsg.cc, server/server.cc, server/servewin32.cc : Rewrote 
	  Exult<->ExultStudio communications to use a socket in Windows. Should be
	  much more stable
	* Other cc files fixing up some 'const' (or lack there of) problems

2006-08-31  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapelst.cc, shapelst.h: The Gimp would fail to load a frame if the
	  game's path in exult.cfg was a relative path. Also, added the ability
	  to export and import all frames of a given shape to/from pngs.

2006-08-29  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* chunks.cc, objs.o: Fixed map corruption bug when dragging chunks from ES.
	  Also, prevent map changes when removing terrain objects if nodel is true,
	  and correctly check for map cache out when moving terrain objects.

2006-08-27  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Makefile.common: Fixed UCC compile problem in MinGW.
	* content/bgkeyring/*/*: Merged in the 'Iteractions' part of Alun Bestor's
	  Quests & Iteractions mod into the Keyring mod. Added generic healing
	  services (used by all healers), Lord British's Crown Jewels and updated
	  the code to use newer features of UCC. Also added casting frames for all
	  caster NPCs and changed some crlfs to lfs.
	* objs/objs.*: Fixed map corruption bug when moving chunk non-flat objects.

2006-08-24    <jeff@mini.nerble.net>

	* schedule.cc,readnpcs.cc,actors.cc:  Working on support for
	usecode-scripted schedules.  Also did some cleanup on schedule
	reading/writing.
	(Eat_at_inn_schedule): No more annoying delay before inn customers
	take their seats.

2006-08-22  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actions.cc: Testing adding a limit to the number of steps between each
	  check in Approach_actor_action (makes for smarter archers and monsters).