@@ -59,15 +59,15 @@ static bool InitializeWinsock()
 	return gWSInitialized;
 }
 
-bool OpenPortFile(const char *static_path, bool writing)
+bool OpenPortFile(const char *gamedat_path, bool writing)
 {
 	// Creates a file to store the port number in that is created
 	// If this fails on the client, there isn't a server active
 	char filename[MAX_PATH];
-	strcpy(filename, static_path);
+	strcpy(filename, gamedat_path);
 	strcat(filename, "\\studio.port");
 
-	// The locking is setup to prevent two servers from running for the same static dir
+	// The locking is setup to prevent two servers from running for the same gamedat dir
 	// it's also setup so the file is deleted when the server shuts down
 	hPortFile = CreateFile (
 		 filename,
@@ -112,7 +112,7 @@ int close(int file)
 
 // Server Functions
 
-bool create_pipe (const char *static_path)
+bool create_pipe (const char *gamedat_path)
 {
 	if (!InitializeWinsock()) return false;
 
@@ -147,9 +147,9 @@ bool create_pipe (const char *static_path)
 	int socksize = sizeof(service);
 	getsockname (gServerSocket, (SOCKADDR*) &service, &socksize);
 
-	if (!OpenPortFile(static_path,true))
+	if (!OpenPortFile(gamedat_path,true))
 	{
-		cerr << "Error creating temporary file in static dir for port number." << endl;
+		cerr << "Error creating temporary file in gamedat dir for port number." << endl;
 		close_pipe();
 		return false;
 	}
@@ -167,7 +167,7 @@ void setup_connect()
 	// Not required
 }
 
-bool try_connect_to_client(const char *static_path)
+bool try_connect_to_client(const char *gamedat_path)
 {
 	// returns size of data waiting, -1 if disconnected
 	fd_set rfds;
@@ -206,7 +206,7 @@ void close_pipe()
 }
 
 // Client Functions
-int try_connect_to_server (const char *static_path)
+int try_connect_to_server (const char *gamedat_path)
 {
 	if (!InitializeWinsock()) return false;
 
@@ -224,9 +224,9 @@ int try_connect_to_server (const char *static_path)
 	service.sin_addr.s_addr = inet_addr( "127.0.0.1" );
 	service.sin_port = 0;
 
-	if (!OpenPortFile(static_path,false))
+	if (!OpenPortFile(gamedat_path,false))
 	{
-		cerr << "Error opening temporary file in static dir with port number." << endl;
+		cerr << "Error opening temporary file in gamedat dir with port number." << endl;
 		close_pipe();
 		return false;
 	}
@@ -236,7 +236,7 @@ int try_connect_to_server (const char *static_path)
 	CloseHandle(hPortFile);
 	hPortFile = INVALID_HANDLE_VALUE;
 	if (numRead != 2) {
-		cerr << "Error read temporary file in static dir with port number." << endl;
+		cerr << "Error read temporary file in gamedat dir with port number." << endl;
 		close_pipe();
 		return false;
 	}
