@@ -1,3 +1,10 @@
+2006-08-31  Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* game.cc: Starting a game with a mod resulted in wrong mod identification
+	  in stdout.
+	* mapedit/studio.cc, server/server.cc, server/servewin32.cc: In Windows, use
+	  gamedat dir instead of static dir to allow simultaneous editing of two mods
+	  that share the same static path (non-Windows already do that).
+
 2006-09-01  Ryan Nunn <colourles@users.sourceforge.net>
 	* audio/midi_drivers/LowLevelMidiDriver.cpp : Improving termination code 
 	  for threaded midi drivers
